--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "next": "latest",
     "prop-types": "latest",
     "react": "latest",
+    "react-code-blocks": "^0.0.9-0",
     "react-dom": "latest"
   },
   "devDependencies": {
